--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="col-sm-6 col-12">
           <div class="container faq-container">
-            <h2 class="faq-title fw-bold fs-2  ">FAQ</h2>
+            <h2 class="faq-title fw-bold fs-2 m-4 mt-5 ">FAQ</h2>
             <div class="accordion accordion-flush m-2" id="accordionFlushExample">
               <div class="accordion-item">
                 <h2 class="accordion-header">
