--- a/index.html
+++ b/index.html
@@ -1,117 +1,100 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- displays site properly based on user's device -->
-
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="./main.js"></script>
   <link rel="stylesheet" href="./style.css">
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-    crossorigin="anonymous"></script>
-
-  <title>Frontend Mentor | FAQ Accordion Card</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title>FAQ Accordion</title>
 </head>
 
 <body>
-  <div class="outer">
+  <main class="outer">
     <div class="outer-con">
       <div class="row">
-        <div class="col-sm-6 col-12">
-          <div class="first-con">
-            <img src="./images/bg-pattern-desktop.svg" class="bg-pattern" alt="">
-            <img src="./images/illustration-woman-online-mobile.svg" class="illustration" alt="">
-          </div>
+        <div class="container">
+          <img src="./images/bg-pattern-desktop.svg" class="bg-pattern" alt="">
+          <img src="./images/illustration-woman-online-mobile.svg" class="illustration" alt="">
         </div>
-        <div class="col-sm-6 col-12">
-          <div class="container faq-container">
-            <h2 class="faq-title fw-bold fs-2 m-4 mt-5 ">FAQ</h2>
-            <div class="accordion accordion-flush m-2" id="accordionFlushExample">
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="acc-btn" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
-                    aria-expanded="false" aria-controls="flush-collapseOne">
-                    How many team members can I invite?
-                    <img src="./images/icon-arrow-down.svg" class="down-btn" alt="">
-                  </button>
-                </h2>
-                <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">You can invite up to 2 additional users
-                    on the Free plan. There is no limit on team members for the Premium plan.
-                  </div>
-                </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="acc-btn" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo"
-                    aria-expanded="false" aria-controls="flush-collapseTwo">
-                    What is the maximum file upload size?
-                    <img src="./images/icon-arrow-down.svg" class="down-btn" alt="">
-                  </button>
-                </h2>
-                <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">No more than 2GB. All files in your
-                    account must fit your allotted storage space.
-                  </div>
-                </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="acc-btn" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree"
-                    aria-expanded="false" aria-controls="flush-collapseThree">
-                    How do I reset my password?
-                    <img src="./images/icon-arrow-down.svg" class="down-btn" alt="">
-                  </button>
-                </h2>
-                <div id="flush-collapseThree" class="accordion-collapse collapse"
-                  data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Click “Forgot password” from the login page or “Change password” from your
-                    profile page. A reset link will be emailed to you.
-                  </div>
-                </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="acc-btn" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour"
-                    aria-expanded="false" aria-controls="flush-collapseFour">
-                    Can I cancel my subscription?
-                    <img src="./images/icon-arrow-down.svg" class="down-btn" alt="">
-                  </button>
-                </h2>
-                <div id="flush-collapseFour" class="accordion-collapse collapse"
-                  data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Yes! Send us a message and we’ll process your request no
-                    questions asked.
-                  </div>
-                </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="acc-btn" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive"
-                    aria-expanded="false" aria-controls="flush-collapseFive">
-                    Do you provide additional support?
-                    <img src="./images/icon-arrow-down.svg" class="down-btn" alt="">
-                  </button>
-                </h2>
-                <div id="flush-collapseFive" class="accordion-collapse collapse"
-                  data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Chat and email support
-                    is available 24/7. Phone lines are open during normal business hours.
-                  </div>
-                </div>
-              </div>
-            </div>
+        <div class="container">
+          <h2 class="faq-title">FAQ</h2>
+          <button class="accordion">How many team members can I invite? <img class="down-btn"
+              src="./images/icon-arrow-down.svg" alt="down-button">
+          </button>
+          <div class="accordion-content">
+            <p>
+              You can invite up to 2 additional users
+              on the Free plan. There is no limit on team members for the Premium plan.
+            </p>
+          </div>
+
+          <button class="accordion">What is the maximum file upload size?
+            <img class="down-btn" src="./images/icon-arrow-down.svg" alt="down-button">
+          </button>
+          <div class="accordion-content">
+            <p>
+              No more than 2GB. All files in your
+              account must fit your allotted storage space.
+            </p>
+          </div>
+
+          <button class="accordion">How do I reset my password?
+            <img class="down-btn" src="./images/icon-arrow-down.svg" alt="down-button">
+          </button>
+          <div class="accordion-content">
+            <p>
+              Click “Forgot password” from the login page or “Change password” from your
+              profile page. A reset link will be emailed to you
+            </p>
+          </div>
+
+          <button class="accordion">Can I cancel my subscription?
+            <img class="down-btn" src="./images/icon-arrow-down.svg" alt="down-button">
+          </button>
+          <div class="accordion-content">
+            <p>
+              Yes! Send us a message and we’ll process your request no
+              questions asked.
+            </p>
+          </div>
+
+          <button class="accordion">Do you provide additional support?
+            <img class="down-btn" src="./images/icon-arrow-down.svg" alt="down-button">
+          </button>
+          <div class="accordion-content">
+            <p>
+              Chat and email support
+              is available 24/7. Phone lines are open during normal business hours.
+            </p>
           </div>
         </div>
       </div>
     </div>
-  </div>
+  </main>
 </body>
+<script>
+  const accordionBtns = document.querySelectorAll('.accordion');
+
+  accordionBtns.forEach((accordion) => {
+    accordion.onclick = function () {
+      this.classList.toggle('is-open');
+
+      let content = this.nextElementSibling;
+      //console.log(content);
+
+      if (content.style.maxHeight) {
+        content.style.maxHeight = null;
+      } else {
+        content.style.maxHeight = content.scrollHeight + 'px';
+        // console.log(content.style.maxHeight);
+      }
+    };
+  });
+
+</script>
 
 </html>
